--- a/Final_CK_Web/add-product.html
+++ b/Final_CK_Web/add-product.html
@@ -8,21 +8,21 @@
 
 <!-- Google Fonts -->
 <link
-	href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600'
+	href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600'
 	rel='stylesheet' type='text/css'>
 <link
-	href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300'
+	href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300'
 	rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,100'
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,100'
 	rel='stylesheet' type='text/css'>
 
 <!-- Bootstrap -->
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 <!-- Font Awesome -->
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/owl.carousel.css">
@@ -302,7 +302,7 @@
 
 	<!-- Bootstrap JS form CDN -->
 	<script
-		src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 	<!-- jQuery sticky menu -->
 	<script src="js/owl.carousel.min.js"></script>
