--- a/Final_CK_Web/login.html
+++ b/Final_CK_Web/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
-<html lang="en">
+<html lang="en" ng-app="IndexApp">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +9,21 @@
 
 <!-- Google Fonts -->
 <link
-	href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600'
+	href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600'
 	rel='stylesheet' type='text/css'>
 <link
-	href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300'
+	href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300'
 	rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,100'
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,100'
 	rel='stylesheet' type='text/css'>
 
 <!-- Bootstrap -->
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
 <!-- Font Awesome -->
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/owl.carousel.css">
@@ -38,7 +38,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body ng-controller="IndexCtr">
 
 	<div class="header-area">
 		<div class="container">
@@ -60,25 +60,15 @@
 				<div class="col-md-4">
 					<div class="header-right">
 						<ul class="list-unstyled list-inline">
-							<li class="dropdown dropdown-small"><a
-								data-toggle="dropdown" data-hover="dropdown"
-								class="dropdown-toggle" href="#"><span class="key">currency
-										:</span><span class="value">USD </span><b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="#">USD</a></li>
-									<li><a href="#">INR</a></li>
-									<li><a href="#">GBP</a></li>
-								</ul></li>
+							 <li class="dropdown dropdown-small">
+                                <a href="login.html" class="key">Đăng nhập </a>
+                               
+                            </li>
 
-							<li class="dropdown dropdown-small"><a
-								data-toggle="dropdown" data-hover="dropdown"
-								class="dropdown-toggle" href="#"><span class="key">language
-										:</span><span class="value">English </span><b class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="#">English</a></li>
-									<li><a href="#">French</a></li>
-									<li><a href="#">German</a></li>
-								</ul></li>
+                            <li class="dropdown dropdown-small">
+                              <a class="key" ng-click="logoutUp()">Đăng xuất </a>
+                                
+                            </li>
 						</ul>
 					</div>
 				</div>
@@ -107,25 +97,81 @@
 		<div class="zigzag-bottom" style="background: none repeat scroll 0 0 #000000; z-index: 0;bottom: 25px; height: 90px" ></div>
 		<div class="container">
 			<div class="row" style="height: 339px">
-				<div class="col-md-5 col-md-offset-3">
-					<form role="form" class="form-signin"
-						action="LoginServlet" method = "post">
-						<h2 class="form-signin-heading">Please sign in</h2>
-						<label class="sr-only" for="inputUserName">User name</label> <input
-							type="username" autofocus="" required="" placeholder="User name"
-							name="username" class="form-control" id="inputUserName">
-						<label class="sr-only" for="inputPassword">Password</label> <input
-							type="password" name="password" required=""
-							placeholder="Password" class="form-control" id="inputPassword">
-						<div class="checkbox">
-							<label> <input type="checkbox" value="remember-me">
-								Remember me
-							</label>
-						</div>
-						<button type="submit" class="btn btn-lg btn-primary btn-block">Sign
-							in</button>
-					</form>
-				</div>
+				<div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel panel-info" >
+            <div class="panel-heading">
+                <div class="panel-title">Sign In</div>
+                <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a></div>
+            </div>
+            <div style="padding-top:30px" class="panel-body" >
+                <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                <form id="loginform" class="form-horizontal" role="form">
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="login-username" type="text" class="form-control" ng-model="username" value="" placeholder="username or email">
+                    </div>
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="login-password" type="password" class="form-control" ng-model="password" placeholder="password">
+                    </div>
+
+                    <div style="margin-top:10px" class="form-group">
+                        <!-- Button -->
+                        <div class="col-sm-12 controls">
+                            <a id="btn-login" href="#" class="btn btn-success" ng-click="loginUp()">Login  </a>
+
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12 control">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+                                Don't have an account!
+                                <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                                Sign Up Here
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div id="signupbox" style="display:none; margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">Sign Up</div>
+                <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">Sign In</a></div>
+            </div>
+            <div class="panel-body" >
+                <form id="signupform" class="form-horizontal" role="form">
+                    <div id="signupalert" style="display:none" class="alert alert-danger">
+                        <p>Error:</p>
+                        <span></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="email"  class="col-md-3 control-label">Email</label>
+                        <div class="col-md-9">
+                            <input type="text"class="form-control" ng-model="email" name="email" placeholder="Email Address">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password"   class="col-md-3 control-label">Password</label>
+                        <div class="col-md-9">
+                            <input type="password" class="form-control" ng-model="password" name="passwd" placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <!-- Button -->
+                        <div class="col-md-offset-3 col-md-9">
+                            <button  id="btn-signup" type="button" class="btn btn-info" ng-click="signUp()"> &nbsp Sign Up</button>
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>v
 			</div>
 		</div>
 	</div>
@@ -153,13 +199,16 @@
 		</div>
 	</div>
 	<!-- End footer bottom area -->
-
+	<script src="bower_components/angular/angular.js"></script>
+	<script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+	<script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
+	<script src="login/login.controller.js" > </script>
 	<!-- Latest jQuery form server -->
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 
 	<!-- Bootstrap JS form CDN -->
 	<script
-		src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 	<!-- jQuery sticky menu -->
 	<script src="js/owl.carousel.min.js"></script>
