--- a/Final_CK_Web/checkout.html
+++ b/Final_CK_Web/checkout.html
@@ -21,7 +21,17 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive.css">
-
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyBJYNukwpJwgL-fAXyHWpWxc3qXV9QvLXE",
+                authDomain: "happyteam.firebaseapp.com",
+                databaseURL: "https://happyteam.firebaseio.com",
+                storageBucket: "project-6843898941924115800.appspot.com",
+            };
+            firebase.initializeApp(config);
+        </script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
