--- a/Final_CK_Web/login.html
+++ b/Final_CK_Web/login.html
@@ -66,7 +66,7 @@
                             </li>
 
                             <li class="dropdown dropdown-small">
-                              <a class="key" ng-click="logoutUp()">Đăng xuất </a>
+                              <a class="key" ng-click="logout()">Đăng xuất </a>
                                 
                             </li>
 						</ul>
