--- a/Final_CK_Web/add-product.html
+++ b/Final_CK_Web/add-product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="IndexApp">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +7,49 @@
         <title>eElectronics - HTML eCommerce Template</title>
 
         <!-- Google Fonts -->
-        <link
-            href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600'
-            rel='stylesheet' type='text/css'>
-        <link
-            href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300'
-            rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Raleway:400,100'
-              rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
 
         <!-- Bootstrap -->
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
         <!-- Font Awesome -->
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/owl.carousel.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="css/responsive.css">
-        <script type="text/javascript" src="ckeditor/ckeditor.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyBJYNukwpJwgL-fAXyHWpWxc3qXV9QvLXE",
+                authDomain: "happyteam.firebaseapp.com",
+                databaseURL: "https://happyteam.firebaseio.com",
+                storageBucket: "project-6843898941924115800.appspot.com",
+            };
+            firebase.initializeApp(config);
+        </script>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
+        <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
+        <!-- AngularJs-->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>	
+        <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.js"></script>
+
+        <script type="text/javascript" src="js/add.product.controller.js" ></script>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-            <![endif]-->
-
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
-    <body>
+    <body ng-controller="addProductController">
 
         <div class="header-area">
             <div class="container">
@@ -97,12 +109,7 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
-                        <div class="shopping-item">
-                            <a href="cart.html">Cart - <span class="cart-amunt">$800</span>
-                                <i class="fa fa-shopping-cart"></i> <span class="product-count">5</span></a>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -154,37 +161,37 @@
 
 
                 <div class="col-md-6 col-md-offset-3">
-                    <form role="form" method="post" action="">
+                    <form role="form">////////////////
                         <div class="form-group">
-                            <label for="username">Tên sản phẩm</label> <input type="text"
+                            <label for="username">Tên sản phẩm</label> <input ng-model="name" type="text"
                                                                               name="username" class="form-control">
                         </div>
                         <div class="form-group">
-                            <label for="password">Giá </label><input type="number" size="4"
+                            <label for="password">Giá </label><input ng-model="price" type="number" size="4"
                                                                      class="input-text qty text form-control" title="Qty" value="1"
                                                                      min="0" step="1">
                         </div>
 
                         <div class="form-group">
-                            <label for="password">Giá Khuyến mãi</label><input type="number"
+                            <label for="password" >Giá Khuyến mãi</label><input ng-model="sellPrice" type="number"
                                                                                size="4" class="input-text qty text form-control" title="Qty"
                                                                                value="1" min="0" step="1">
                         </div>
 
                         <div class="form-group">
-                            <label for="fullName">Mô tả </label>
-                            <textarea name="txtDescription" id=""txtDescription"" rows="10" cols="80">
+                            <label for="fullName" >Mô tả </label>
+                            <textarea ng-model="description" name="txtDescription" id=""txtDescription"" rows="10" cols="80">
 
                         </textarea>
                         <script>
                             // Replace the <textarea id="editor1"> with a CKEditor
                             // instance, using default configuration.
-                            CKEDITOR.replace('"txtDescription"');
+                            //CKEDITOR.replace('"txtDescription"');
                         </script>
                     </div>
                     <div class="form-group">
                         <label for="image">Hình ảnh</label> <input type="text" name="txtImage"
-                                                                   class="form-control">
+                                                                   class="form-control" ng-model="image">
                     </div>
 
                     <div class="form-group">
@@ -195,8 +202,8 @@
                         </select>
                     </div>
                     <p>
-                        <button class="btn btn-primary" type="submit">Thêm mới</button>
-                        <button class="btn btn-default" type="button">Reset</button>
+                        <button class="btn btn-primary" type="button" ng-click="addProduct()">Thêm mới</button>
+                        <button class="btn btn-default" type="button" ng-click="reset()">Reset</button>
                     </p>
 
                 </form>
