--- a/Final_CK_Web/single-product.html
+++ b/Final_CK_Web/single-product.html
@@ -32,6 +32,14 @@
             };
             firebase.initializeApp(config);
         </script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-78939206-1', 'auto');
+			ga('send', 'pageview');
+		</script>
         <script src="bower_components/angular/angular.js"></script>
         <script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
         <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
@@ -50,12 +58,85 @@
         <![endif]-->
     </head>
     <body ng-controller="singleProductControler">
-    <div ng-include="'includes/header.htm'"></div>
-         <!-- End header area -->
-    <div ng-include="'includes/branding.htm'"></div>
-        <!-- End site branding area -->
-    <div ng-include="'includes/mainmenu.htm'"></div>
-        <!-- End mainmenu area -->
+
+        <div class="header-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="user-menu">
+                            <ul>
+                                
+                                <li><a href="cart.html"><i class="fa fa-user"></i> My Cart</a></li>
+                                <li><a href="checkout.html"><i class="fa fa-user"></i> Checkout</a></li>
+                                <li><a href="login.html"><i class="fa fa-user"></i> Login</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4" >
+                        <div class="header-right">
+                            <ul class="list-unstyled list-inline">
+                                <li class="dropdown dropdown-small">
+                                    <a ng-show="LoginDN" href="{{author.link}}" class="key">{{author.username}} </a>
+									
+                                </li>
+
+                                <li class="dropdown dropdown-small">
+                                    <a class="key" ng-show='LoginDX' ng-click="logoutUp()">Đăng xuất </a>
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- End header area -->
+
+        <div class="site-branding-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="logo">
+                            <h1><a href="index.html">e<span>Electronics</span></a></h1>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="shopping-item">
+                            <a href="cart.html">Cart - <span class="cart-amunt">{{listCart.totalPrice}}</span> <i class="fa fa-shopping-cart"></i> <span class="product-count">{{listCart.listCart.length}}</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- End site branding area -->
+
+        <div class="mainmenu-area">
+            <div class="container">
+                <div class="row">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div> 
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="shop.html">Shop page</a></li>
+                            <li class="active"><a href="single-product.html">Single product</a></li>
+                            <li><a href="cart.html">Cart</a></li>
+                            <li><a href="checkout.html">Checkout</a></li>
+							<li><a ng-show="admin" href="add-product.html">Add Product</a></li>
+                            <li><a href="#">Category</a></li>
+                            <li><a href="#">Others</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>  
+                </div>
+            </div>
+        </div> <!-- End mainmenu area -->
 
         <div class="product-big-title-area">
             <div class="container">
@@ -291,10 +372,83 @@
         </div>
 
 
-    <div ng-include="'includes/footer_top.htm'"></div>
+        <div class="footer-top-area">
+            <div class="zigzag-bottom"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="footer-about-us">
+                            <h2>e<span>Electronics</span></h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus vero quam laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni at?</p>
+                            <div class="footer-social">
+                                <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+                                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
+                                <a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
+                                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <a href="#" target="_blank"><i class="fa fa-pinterest"></i></a>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-md-3 col-sm-6">
+                        <div class="footer-menu">
+                            <h2 class="footer-wid-title">User Navigation </h2>
+                            <ul>
+                                <li><a href="">My account</a></li>
+                                <li><a href="">Order history</a></li>
+                                <li><a href="">Wishlist</a></li>
+                                <li><a href="">Vendor contact</a></li>
+                                <li><a href="">Front page</a></li>
+                            </ul>                        
+                        </div>
+                    </div>
 
-    <div ng-include="'includes/footer_bottom.htm'"></div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="footer-menu">
+                            <h2 class="footer-wid-title">Categories</h2>
+                            <ul>
+                                <li><a href="">Mobile Phone</a></li>
+                                <li><a href="">Home accesseries</a></li>
+                                <li><a href="">LED TV</a></li>
+                                <li><a href="">Computer</a></li>
+                                <li><a href="">Gadets</a></li>
+                            </ul>                        
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6">
+                        <div class="footer-newsletter">
+                            <h2 class="footer-wid-title">Newsletter</h2>
+                            <p>Sign up to our newsletter and get exclusive deals you wont find anywhere else straight to your inbox!</p>
+                            <div class="newsletter-form">
+                                <input type="email" placeholder="Type your email">
+                                <input type="submit" value="Subscribe">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="copyright">
+                            <p>&copy; 2015 eElectronics. All Rights Reserved. Coded with <i class="fa fa-heart"></i> by <a href="http://wpexpand.com" target="_blank">WP Expand</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="footer-card-icon">
+                            <i class="fa fa-cc-discover"></i>
+                            <i class="fa fa-cc-mastercard"></i>
+                            <i class="fa fa-cc-paypal"></i>
+                            <i class="fa fa-cc-visa"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Latest jQuery form server -->
         <script src="https://code.jquery.com/jquery.min.js"></script>
